--- a/tutorial.yaml
+++ b/tutorial.yaml
@@ -1,4 +1,4 @@
-title: Getting Started with SpriteBuilder
+title: Clone Angry Birds with SpriteBuilder and Swift
 cover: cover.png
 teaser_text: |
     Learn how to clone the popular Game Angry Birds with SpriteBuilder.
