Shortening teaser text to less than 150 characters

--- a/tutorial.yaml
+++ b/tutorial.yaml
@@ -1,4 +1,4 @@
 title: Clone Angry Birds with SpriteBuilder and Swift
 cover: cover.png
 teaser_text: |
-    This tutorial will teach you the basics of SpriteBuilder and Cocos2D and you will clone the popular Game Angry Birds with SpriteBuilder.
+    This tutorial will teach you the basics of SpriteBuilder and Cocos2D and you will clone the popular Game Angry Birds with Cocos2D.
